--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,9 +6,9 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Creative - Start Bootstrap Theme</title>
+    <title>{{ site.title }}</title>
 
-    <!-- Bootstrap Core CSS -->
+    <!-- Bootstrap Core CSS Creative - Start Bootstrap Theme -->
     <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
 
     <!-- Custom Fonts -->
