--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,7 +6,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>{{ site.title }}</title>
+    <title>Test Juan</title>
 
     <!-- Bootstrap Core CSS Creative - Start Bootstrap Theme -->
     <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
