--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,7 +8,7 @@
 
     <title>{{ site.title }}</title>
 
-    <!-- Bootstrap Core CSS Creative - Start Bootstrap Theme -->
+    <!-- Bootstrap Core CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
 
     <!-- Custom Fonts -->
