--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,7 +6,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>{{ site.title }}</title>
+    <title>Dagaa</title>
     <link href="http://dagaa.mx/favicon.ico" rel="shortcut icon">
 
     <!-- Bootstrap Core CSS -->
