--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -3,14 +3,14 @@
         <div class="row no-gutter">
             <div class="col-lg-4 col-sm-6">
                 <a href="#" class="portfolio-box">
-                    <img src="img/portfolio/1.jpg" class="img-responsive" alt="">
+                    <img src="http://dagaa.mx/img/dagaa-col-1.jpg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
-                                Category
+                                Innovation maker
                             </div>
                             <div class="project-name">
-                                Project Name
+                                ADOLFO COTA
                             </div>
                         </div>
                     </div>
@@ -18,14 +18,14 @@
             </div>
             <div class="col-lg-4 col-sm-6">
                 <a href="#" class="portfolio-box">
-                    <img src="img/portfolio/2.jpg" class="img-responsive" alt="">
+                    <img src="http://dagaa.mx/img/dagaa-col-2.jpg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
-                                Category
+                                Administration and Finance
                             </div>
                             <div class="project-name">
-                                Project Name
+                                DIANA CORDOVA
                             </div>
                         </div>
                     </div>
@@ -33,14 +33,14 @@
             </div>
             <div class="col-lg-4 col-sm-6">
                 <a href="#" class="portfolio-box">
-                    <img src="img/portfolio/3.jpg" class="img-responsive" alt="">
+                    <img src="http://dagaa.mx/img/dagaa-col-3.jpg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
-                                Category
+                                Project Manager
                             </div>
                             <div class="project-name">
-                                Project Name
+                                EMMANUEL GALVAN
                             </div>
                         </div>
                     </div>
@@ -48,14 +48,14 @@
             </div>
             <div class="col-lg-4 col-sm-6">
                 <a href="#" class="portfolio-box">
-                    <img src="img/portfolio/4.jpg" class="img-responsive" alt="">
+                    <img src="http://dagaa.mx/img/dagaa-col-4.jpg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
-                                Category
+                                Mechanical design engineer
                             </div>
                             <div class="project-name">
-                                Project Name
+                                JOSE JUAN MADRIGAL
                             </div>
                         </div>
                     </div>
@@ -63,14 +63,14 @@
             </div>
             <div class="col-lg-4 col-sm-6">
                 <a href="#" class="portfolio-box">
-                    <img src="img/portfolio/5.jpg" class="img-responsive" alt="">
+                    <img src="http://dagaa.mx/img/dagaa-col-5.jpg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
-                                Category
+                                Electronics and programming creator
                             </div>
                             <div class="project-name">
-                                Project Name
+                                JUAN CARLOS ROJAS
                             </div>
                         </div>
                     </div>
@@ -78,14 +78,14 @@
             </div>
             <div class="col-lg-4 col-sm-6">
                 <a href="#" class="portfolio-box">
-                    <img src="img/portfolio/6.jpg" class="img-responsive" alt="">
+                    <img src="https://ca.slack-edge.com/TANAXV0SE-UJAP2RNE5-54533c5e430b-512" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
-                                Category
+                                Design and manufacturing engineer
                             </div>
                             <div class="project-name">
-                                Project Name
+                                CESAR HUMBERTO GALINDO
                             </div>
                         </div>
                     </div>
